language model notebooks

--- a/language_model/TestFillMask.ipynb
+++ b/language_model/TestFillMask.ipynb
@@ -158,15 +158,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "I0930 10:30:41.032662 24936 configuration_utils.py:262] loading configuration file ./jobert\\config.json\n",
-      "I0930 10:30:41.033659 24936 configuration_utils.py:300] Model config BertConfig {\n",
+      "I1002 21:04:32.594120 33304 file_utils.py:39] PyTorch version 1.6.0 available.\n",
+      "I1002 21:04:39.430859 33304 file_utils.py:55] TensorFlow version 2.2.0 available.\n",
+      "I1002 21:04:42.591420 33304 configuration_utils.py:262] loading configuration file ./jobert\\config.json\n",
+      "I1002 21:04:42.592416 33304 configuration_utils.py:300] Model config BertConfig {\n",
       "  \"architectures\": [\n",
       "    \"BertForMaskedLM\"\n",
       "  ],\n",
@@ -187,15 +189,15 @@
       "  \"vocab_size\": 20839\n",
       "}\n",
       "\n",
-      "I0930 10:30:41.034657 24936 tokenization_utils_base.py:1167] Model name './jobert' not found in model shortcut name list (bert-base-uncased, bert-large-uncased, bert-base-cased, bert-large-cased, bert-base-multilingual-uncased, bert-base-multilingual-cased, bert-base-chinese, bert-base-german-cased, bert-large-uncased-whole-word-masking, bert-large-cased-whole-word-masking, bert-large-uncased-whole-word-masking-finetuned-squad, bert-large-cased-whole-word-masking-finetuned-squad, bert-base-cased-finetuned-mrpc, bert-base-german-dbmdz-cased, bert-base-german-dbmdz-uncased, TurkuNLP/bert-base-finnish-cased-v1, TurkuNLP/bert-base-finnish-uncased-v1, wietsedv/bert-base-dutch-cased). Assuming './jobert' is a path, a model identifier, or url to a directory containing tokenizer files.\n",
-      "I0930 10:30:41.035656 24936 tokenization_utils_base.py:1197] Didn't find file ./jobert\\added_tokens.json. We won't load it.\n",
-      "I0930 10:30:41.059591 24936 tokenization_utils_base.py:1197] Didn't find file ./jobert\\tokenizer.json. We won't load it.\n",
-      "I0930 10:30:41.061586 24936 tokenization_utils_base.py:1252] loading file ./jobert\\vocab.txt\n",
-      "I0930 10:30:41.062582 24936 tokenization_utils_base.py:1252] loading file None\n",
-      "I0930 10:30:41.063580 24936 tokenization_utils_base.py:1252] loading file ./jobert\\special_tokens_map.json\n",
-      "I0930 10:30:41.064577 24936 tokenization_utils_base.py:1252] loading file ./jobert\\tokenizer_config.json\n",
-      "I0930 10:30:41.065575 24936 tokenization_utils_base.py:1252] loading file None\n",
-      "I0930 10:30:41.136386 24936 modelcard.py:177] Model card: {\n",
+      "I1002 21:04:42.593413 33304 tokenization_utils_base.py:1167] Model name './jobert' not found in model shortcut name list (bert-base-uncased, bert-large-uncased, bert-base-cased, bert-large-cased, bert-base-multilingual-uncased, bert-base-multilingual-cased, bert-base-chinese, bert-base-german-cased, bert-large-uncased-whole-word-masking, bert-large-cased-whole-word-masking, bert-large-uncased-whole-word-masking-finetuned-squad, bert-large-cased-whole-word-masking-finetuned-squad, bert-base-cased-finetuned-mrpc, bert-base-german-dbmdz-cased, bert-base-german-dbmdz-uncased, TurkuNLP/bert-base-finnish-cased-v1, TurkuNLP/bert-base-finnish-uncased-v1, wietsedv/bert-base-dutch-cased). Assuming './jobert' is a path, a model identifier, or url to a directory containing tokenizer files.\n",
+      "I1002 21:04:42.595408 33304 tokenization_utils_base.py:1197] Didn't find file ./jobert\\added_tokens.json. We won't load it.\n",
+      "I1002 21:04:42.596405 33304 tokenization_utils_base.py:1197] Didn't find file ./jobert\\tokenizer.json. We won't load it.\n",
+      "I1002 21:04:42.597403 33304 tokenization_utils_base.py:1252] loading file ./jobert\\vocab.txt\n",
+      "I1002 21:04:42.598400 33304 tokenization_utils_base.py:1252] loading file None\n",
+      "I1002 21:04:42.598400 33304 tokenization_utils_base.py:1252] loading file ./jobert\\special_tokens_map.json\n",
+      "I1002 21:04:42.599397 33304 tokenization_utils_base.py:1252] loading file ./jobert\\tokenizer_config.json\n",
+      "I1002 21:04:42.600394 33304 tokenization_utils_base.py:1252] loading file None\n",
+      "I1002 21:04:42.657243 33304 modelcard.py:177] Model card: {\n",
       "  \"caveats_and_recommendations\": {},\n",
       "  \"ethical_considerations\": {},\n",
       "  \"evaluation_data\": {},\n",
@@ -207,8 +209,10 @@
       "  \"training_data\": {}\n",
       "}\n",
       "\n",
-      "I0930 10:30:41.137412 24936 configuration_utils.py:262] loading configuration file ./jobert\\config.json\n",
-      "I0930 10:30:41.138408 24936 configuration_utils.py:300] Model config BertConfig {\n",
+      "C:\\WPy64-3740\\python-3.7.4.amd64\\lib\\site-packages\\transformers\\modeling_auto.py:798: FutureWarning: The class `AutoModelWithLMHead` is deprecated and will be removed in a future version. Please use `AutoModelForCausalLM` for causal language models, `AutoModelForMaskedLM` for masked language models and `AutoModelForSeq2SeqLM` for encoder-decoder models.\n",
+      "  FutureWarning,\n",
+      "I1002 21:04:42.668214 33304 configuration_utils.py:262] loading configuration file ./jobert\\config.json\n",
+      "I1002 21:04:42.669211 33304 configuration_utils.py:300] Model config BertConfig {\n",
       "  \"architectures\": [\n",
       "    \"BertForMaskedLM\"\n",
       "  ],\n",
@@ -229,11 +233,11 @@
       "  \"vocab_size\": 20839\n",
       "}\n",
       "\n",
-      "I0930 10:30:41.139378 24936 modeling_utils.py:665] loading weights file ./jobert\\pytorch_model.bin\n",
-      "W0930 10:30:48.008118 24936 modeling_utils.py:757] Some weights of the model checkpoint at ./jobert were not used when initializing BertForMaskedLM: ['bert.embeddings.position_ids']\n",
+      "I1002 21:04:42.670208 33304 modeling_utils.py:665] loading weights file ./jobert\\pytorch_model.bin\n",
+      "W1002 21:04:49.273572 33304 modeling_utils.py:757] Some weights of the model checkpoint at ./jobert were not used when initializing BertForMaskedLM: ['bert.embeddings.position_ids']\n",
       "- This IS expected if you are initializing BertForMaskedLM from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPretraining model).\n",
       "- This IS NOT expected if you are initializing BertForMaskedLM from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "I0930 10:30:48.012108 24936 modeling_utils.py:774] All the weights of BertForMaskedLM were initialized from the model checkpoint at ./jobert.\n",
+      "I1002 21:04:49.274569 33304 modeling_utils.py:774] All the weights of BertForMaskedLM were initialized from the model checkpoint at ./jobert.\n",
       "If your task is similar to the task the model of the ckeckpoint was trained on, you can already use BertForMaskedLM for predictions without further training.\n"
      ]
     }
@@ -250,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,6 +658,134 @@
    "source": [
     "fill_mask.topk(5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'sequence': '[CLS] 이어 교환 수 처녀 의 새 와 같 은 목소리 가 튀 여 나오 았 다. [SEP]',\n",
+       "  'score': 0.13945265114307404,\n",
+       "  'token': 6983,\n",
+       "  'token_str': '와'},\n",
+       " {'sequence': '[CLS] 이어 교환 수 처녀 의 새 불 같 은 목소리 가 튀 여 나오 았 다. [SEP]',\n",
+       "  'score': 0.02858821302652359,\n",
+       "  'token': 6424,\n",
+       "  'token_str': '불'},\n",
+       " {'sequence': '[CLS] 이어 교환 수 처녀 의 새 눈 같 은 목소리 가 튀 여 나오 았 다. [SEP]',\n",
+       "  'score': 0.028291307389736176,\n",
+       "  'token': 5745,\n",
+       "  'token_str': '눈'},\n",
+       " {'sequence': '[CLS] 이어 교환 수 처녀 의 새 들 같 은 목소리 가 튀 여 나오 았 다. [SEP]',\n",
+       "  'score': 0.02025880105793476,\n",
+       "  'token': 5931,\n",
+       "  'token_str': '들'},\n",
+       " {'sequence': '[CLS] 이어 교환 수 처녀 의 새 만 같 은 목소리 가 튀 여 나오 았 다. [SEP]',\n",
+       "  'score': 0.018851609900593758,\n",
+       "  'token': 6150,\n",
+       "  'token_str': '만'},\n",
+       " {'sequence': '[CLS] 이어 교환 수 처녀 의 새땀 같 은 목소리 가 튀 여 나오 았 다. [SEP]',\n",
+       "  'score': 0.014235147275030613,\n",
+       "  'token': 13647,\n",
+       "  'token_str': '##땀'},\n",
+       " {'sequence': '[CLS] 이어 교환 수 처녀 의 새 빛 같 은 목소리 가 튀 여 나오 았 다. [SEP]',\n",
+       "  'score': 0.013791777193546295,\n",
+       "  'token': 6458,\n",
+       "  'token_str': '빛'},\n",
+       " {'sequence': '[CLS] 이어 교환 수 처녀 의 새 것 같 은 목소리 가 튀 여 나오 았 다. [SEP]',\n",
+       "  'score': 0.013776082545518875,\n",
+       "  'token': 5398,\n",
+       "  'token_str': '것'},\n",
+       " {'sequence': '[CLS] 이어 교환 수 처녀 의 새 도 같 은 목소리 가 튀 여 나오 았 다. [SEP]',\n",
+       "  'score': 0.011411099694669247,\n",
+       "  'token': 5859,\n",
+       "  'token_str': '도'},\n",
+       " {'sequence': '[CLS] 이어 교환 수 처녀 의 새 과 같 은 목소리 가 튀 여 나오 았 다. [SEP]',\n",
+       "  'score': 0.010894156992435455,\n",
+       "  'token': 5468,\n",
+       "  'token_str': '과'}]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fill_mask.topk = 10\n",
+    "fill_mask(preproc('이어 교환수처녀의 새 MASK 같은 목소리가 튀여나왔다.'))\n",
+    "#[x for x in _ if x['token_str'] == '새소리']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'sequence': '[CLS] 처녀 아이들 의 불 같 은 목소리 이 었 소. [SEP]',\n",
+       "  'score': 0.35174381732940674,\n",
+       "  'token': 6424,\n",
+       "  'token_str': '불'},\n",
+       " {'sequence': '[CLS] 처녀 아이들 의 하늘 같 은 목소리 이 었 소. [SEP]',\n",
+       "  'score': 0.0982450470328331,\n",
+       "  'token': 7796,\n",
+       "  'token_str': '하늘'},\n",
+       " {'sequence': '[CLS] 처녀 아이들 의 열화 같 은 목소리 이 었 소. [SEP]',\n",
+       "  'score': 0.05934443324804306,\n",
+       "  'token': 18474,\n",
+       "  'token_str': '열화'},\n",
+       " {'sequence': '[CLS] 처녀 아이들 의 폭풍 같 은 목소리 이 었 소. [SEP]',\n",
+       "  'score': 0.012454052455723286,\n",
+       "  'token': 16676,\n",
+       "  'token_str': '폭풍'},\n",
+       " {'sequence': '[CLS] 처녀 아이들 의 철석 같 은 목소리 이 었 소. [SEP]',\n",
+       "  'score': 0.011075426824390888,\n",
+       "  'token': 17509,\n",
+       "  'token_str': '철석'},\n",
+       " {'sequence': '[CLS] 처녀 아이들 의 말 같 은 목소리 이 었 소. [SEP]',\n",
+       "  'score': 0.009128082543611526,\n",
+       "  'token': 6160,\n",
+       "  'token_str': '말'},\n",
+       " {'sequence': '[CLS] 처녀 아이들 의 구슬 같 은 목소리 이 었 소. [SEP]',\n",
+       "  'score': 0.007877320051193237,\n",
+       "  'token': 17880,\n",
+       "  'token_str': '구슬'},\n",
+       " {'sequence': '[CLS] 처녀 아이들 의 눈 같 은 목소리 이 었 소. [SEP]',\n",
+       "  'score': 0.007699110545217991,\n",
+       "  'token': 5745,\n",
+       "  'token_str': '눈'},\n",
+       " {'sequence': '[CLS] 처녀 아이들 의 하나 같 은 목소리 이 었 소. [SEP]',\n",
+       "  'score': 0.007514186203479767,\n",
+       "  'token': 7792,\n",
+       "  'token_str': '하나'},\n",
+       " {'sequence': '[CLS] 처녀 아이들 의 꼭 같 은 목소리 이 었 소. [SEP]',\n",
+       "  'score': 0.007096545305103064,\n",
+       "  'token': 5616,\n",
+       "  'token_str': '꼭'}]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fill_mask.topk = 10\n",
+    "fill_mask(preproc('처녀아이들의 MASK 같은 목소리였소.'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
