--- a/language_model/Word & Sentence Probabilities.ipynb
+++ b/language_model/Word & Sentence Probabilities.ipynb
@@ -41,15 +41,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "I0908 19:21:52.470256 37080 configuration_utils.py:262] loading configuration file ./jobert\\config.json\n",
-      "I0908 19:21:52.524113 37080 configuration_utils.py:300] Model config BertConfig {\n",
+      "I0920 18:28:29.701387 49456 file_utils.py:39] PyTorch version 1.6.0 available.\n",
+      "I0920 18:28:37.491021 49456 file_utils.py:55] TensorFlow version 2.2.0 available.\n",
+      "I0920 18:28:39.245657 49456 configuration_utils.py:262] loading configuration file ./jobert\\config.json\n",
+      "I0920 18:28:39.246695 49456 configuration_utils.py:300] Model config BertConfig {\n",
       "  \"architectures\": [\n",
       "    \"BertForMaskedLM\"\n",
       "  ],\n",
@@ -70,18 +72,18 @@
       "  \"vocab_size\": 20839\n",
       "}\n",
       "\n",
-      "I0908 19:21:52.539073 37080 tokenization_utils_base.py:1167] Model name './jobert' not found in model shortcut name list (bert-base-uncased, bert-large-uncased, bert-base-cased, bert-large-cased, bert-base-multilingual-uncased, bert-base-multilingual-cased, bert-base-chinese, bert-base-german-cased, bert-large-uncased-whole-word-masking, bert-large-cased-whole-word-masking, bert-large-uncased-whole-word-masking-finetuned-squad, bert-large-cased-whole-word-masking-finetuned-squad, bert-base-cased-finetuned-mrpc, bert-base-german-dbmdz-cased, bert-base-german-dbmdz-uncased, TurkuNLP/bert-base-finnish-cased-v1, TurkuNLP/bert-base-finnish-uncased-v1, wietsedv/bert-base-dutch-cased). Assuming './jobert' is a path, a model identifier, or url to a directory containing tokenizer files.\n",
-      "I0908 19:21:52.736546 37080 tokenization_utils_base.py:1197] Didn't find file ./jobert\\added_tokens.json. We won't load it.\n",
-      "I0908 19:21:52.742537 37080 tokenization_utils_base.py:1197] Didn't find file ./jobert\\tokenizer.json. We won't load it.\n",
-      "I0908 19:21:52.744525 37080 tokenization_utils_base.py:1252] loading file ./jobert\\vocab.txt\n",
-      "I0908 19:21:52.745522 37080 tokenization_utils_base.py:1252] loading file None\n",
-      "I0908 19:21:52.747517 37080 tokenization_utils_base.py:1252] loading file ./jobert\\special_tokens_map.json\n",
-      "I0908 19:21:52.748514 37080 tokenization_utils_base.py:1252] loading file ./jobert\\tokenizer_config.json\n",
-      "I0908 19:21:52.749512 37080 tokenization_utils_base.py:1252] loading file None\n",
+      "I0920 18:28:39.247652 49456 tokenization_utils_base.py:1167] Model name './jobert' not found in model shortcut name list (bert-base-uncased, bert-large-uncased, bert-base-cased, bert-large-cased, bert-base-multilingual-uncased, bert-base-multilingual-cased, bert-base-chinese, bert-base-german-cased, bert-large-uncased-whole-word-masking, bert-large-cased-whole-word-masking, bert-large-uncased-whole-word-masking-finetuned-squad, bert-large-cased-whole-word-masking-finetuned-squad, bert-base-cased-finetuned-mrpc, bert-base-german-dbmdz-cased, bert-base-german-dbmdz-uncased, TurkuNLP/bert-base-finnish-cased-v1, TurkuNLP/bert-base-finnish-uncased-v1, wietsedv/bert-base-dutch-cased). Assuming './jobert' is a path, a model identifier, or url to a directory containing tokenizer files.\n",
+      "I0920 18:28:39.248650 49456 tokenization_utils_base.py:1197] Didn't find file ./jobert\\added_tokens.json. We won't load it.\n",
+      "I0920 18:28:39.249648 49456 tokenization_utils_base.py:1197] Didn't find file ./jobert\\tokenizer.json. We won't load it.\n",
+      "I0920 18:28:39.251682 49456 tokenization_utils_base.py:1252] loading file ./jobert\\vocab.txt\n",
+      "I0920 18:28:39.252640 49456 tokenization_utils_base.py:1252] loading file None\n",
+      "I0920 18:28:39.253637 49456 tokenization_utils_base.py:1252] loading file ./jobert\\special_tokens_map.json\n",
+      "I0920 18:28:39.253637 49456 tokenization_utils_base.py:1252] loading file ./jobert\\tokenizer_config.json\n",
+      "I0920 18:28:39.255632 49456 tokenization_utils_base.py:1252] loading file None\n",
       "C:\\WPy64-3740\\python-3.7.4.amd64\\lib\\site-packages\\transformers\\modeling_auto.py:798: FutureWarning: The class `AutoModelWithLMHead` is deprecated and will be removed in a future version. Please use `AutoModelForCausalLM` for causal language models, `AutoModelForMaskedLM` for masked language models and `AutoModelForSeq2SeqLM` for encoder-decoder models.\n",
       "  FutureWarning,\n",
-      "I0908 19:21:55.488203 37080 configuration_utils.py:262] loading configuration file ./jobert\\config.json\n",
-      "I0908 19:21:55.490197 37080 configuration_utils.py:300] Model config BertConfig {\n",
+      "I0920 18:28:40.053804 49456 configuration_utils.py:262] loading configuration file ./jobert\\config.json\n",
+      "I0920 18:28:40.054802 49456 configuration_utils.py:300] Model config BertConfig {\n",
       "  \"architectures\": [\n",
       "    \"BertForMaskedLM\"\n",
       "  ],\n",
@@ -102,11 +104,11 @@
       "  \"vocab_size\": 20839\n",
       "}\n",
       "\n",
-      "I0908 19:21:55.491194 37080 modeling_utils.py:665] loading weights file ./jobert\\pytorch_model.bin\n",
-      "W0908 19:22:01.939983 37080 modeling_utils.py:757] Some weights of the model checkpoint at ./jobert were not used when initializing BertForMaskedLM: ['bert.embeddings.position_ids']\n",
+      "I0920 18:28:40.055800 49456 modeling_utils.py:665] loading weights file ./jobert\\pytorch_model.bin\n",
+      "W0920 18:28:47.367472 49456 modeling_utils.py:757] Some weights of the model checkpoint at ./jobert were not used when initializing BertForMaskedLM: ['bert.embeddings.position_ids']\n",
       "- This IS expected if you are initializing BertForMaskedLM from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPretraining model).\n",
       "- This IS NOT expected if you are initializing BertForMaskedLM from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "I0908 19:22:01.940981 37080 modeling_utils.py:774] All the weights of BertForMaskedLM were initialized from the model checkpoint at ./jobert.\n",
+      "I0920 18:28:47.368469 49456 modeling_utils.py:774] All the weights of BertForMaskedLM were initialized from the model checkpoint at ./jobert.\n",
       "If your task is similar to the task the model of the ckeckpoint was trained on, you can already use BertForMaskedLM for predictions without further training.\n"
      ]
     }
@@ -121,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +246,7 @@
        "0.04743360799931327"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
