--- a/language_model/Untitled.ipynb
+++ b/language_model/Untitled.ipynb
@@ -33,7 +33,7 @@
     "    wordpieces_prefix=\"##\")\n",
     "\n",
     "min_frequency = 5\n",
-    "vocab_size    = 15000\n",
+    "vocab_size    = 32000\n",
     "limit_alphabet= 6000\n",
     "\n",
     "# Customize training\n",
@@ -59,7 +59,7 @@
     "                   ]  # 스페셜 토큰\n",
     ")\n",
     "# Save files to disk\n",
-    "tokenizer.save(\".\", \"jobert\")"
+    "tokenizer.save(\".\", \"nkbert\")"
    ]
   },
   {
@@ -547,7 +547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
